# GameOfLife

./: CMakeLists.txt  life.h  main.c
